--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Candle</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="candle">
-        <div class="flame" id="flame"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Candle Blow</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+  </head>
+  <body>
+    <div class="happy-birthday-frame">
+      Cắm nến lên bánh rồi thổi nhá!
+      Bạn đã cắm <span id="candleCount">0</span> cái nến.
+    </div>
+    <div class="cake">
+      <div class="plate"></div>
+      <div class="layer layer-bottom"></div>
+      <div class="layer layer-middle"></div>
+      <div class="layer layer-top"></div>
+      <div class="icing"></div>
+      <div class="drip drip1"></div>
+      <div class="drip drip2"></div>
+      <div class="drip drip3"></div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
+<div id="hearts-container"></div>
+<!-- <div id="birthday-message"><img src="https://giffiles.alphacoders.com/851/85138.gif"></div> -->
